<resources>
    <string name="app_name">Data And Intents</string>
    <string name="headline_text">This will prove that I can take data and pass it to another view using Intents</string>
    <string name="name">Name</string>
    <string name="age">Age</string>
    <string name="email">Email</string>
    <string name="phone_number">Phone Number</string>
    <string name="send_data">Send Data</string>
</resources>
